# libndsl

./: .gitignore  .gitmodules  CMakeLists.txt  config.h.in
docs/: DTP说明.docx  EventLoop设计文档.docx  group1.md  ndsl.vsdx
examples/: CMakeLists.txt
examples/Proxyserver_zzt/: CMakeLists.txt  Client.cc  Httphandler.cc  Httphandler.h  Protbload.proto  Server.cc  proxyserver.cc
examples/Relayserver_zsq/: CMakeLists.txt  Protbload.proto  client.cc  client1.cc  nTcprelay.cc  server.cc  server1.cc  tcprelay.cc
examples/ftp_lgr/: CMakeLists.txt  FtpServer.cc  ftp.conf  main.cc
examples/ftp_lgr/include/: FTPCodes.h  FTPServer.h  Session.h
examples/ftp_lgr/src/: FTPServer.cc  Session.cc
examples/ftp_ly/: CMakeLists.txt  FileManage.cc  FileManage.h  FtpClient.cc  FtpClient.h  FtpClientHandle.cc  FtpServer.cc  FtpServer.h  Protbload.proto  ServerHandle.cc  ServerHandle.h  main.cc
examples/ftp_rxj/: CommandHandler.cc  CommandHandler.h  FileOperator.cc  FileOperator.h
examples/ftp_rxj/include/: .Connection.h.swp  CommandHandler.h  Connection.h  FileOperator.h  config_ftp.h
examples/ftp_rxj/src/: CMakeLists.txt  CommandHandler.cc  Connection.cc  FileOperator.cc  FtpSever.cc
examples/ftp_why/include/: Common.h  FtpConnection.h  FtpProto.h  FtpReply.h  FtpServer.h  Session.h  StringUtil.h  SysUtil.h
examples/ftp_why/src/: CMakeLists.txt  FtpConnection.cc  FtpProto.cc  FtpReply.cc  FtpServer.cc  Session.cc  StringUtil.cc  SysUtil.cc  main.cc
include/ndsl/net/: Acceptor.h  Asynclo.h  BaseChannel.h  Channel.h  Clientplugin.h  DTP.h  DTPClient.h  Dns.h  ELThreadpool.h  Entity.h  Epoll.h  EventLoop.h  EventfdChannel.h  EventfdConnection.h  FifoIpc.h  Multiplexer.h  PipeAndFifo.h  PipeChannel.h  RdmaAcceptor.h  RdmaClient.h  RdmaConnection.h  Serverplugin.h  SignalChannel.h  SignalHandler.h  SocketAddress.h  SocketAddressUn.h  SocketOpt.h  TcpAcceptor.h  TcpChannel.h  TcpClient.h  TcpConnection.h  TimeWheel.h  UdpChannel.h  UdpClient.h  UdpEndpoint.h  UnixAcceptor.h  UnixChannel.h  UnixConnection.h  WQThreadpool.h
include/ndsl/utils/: Endian.h  Error.h  EventLoopThreadpool.h  Guid.h  Log.h  Noncopyable.h  Plugin.h  Semaphore.h  Thread.h  TimeStamp.h  V8Work.h  WorkQueue.h  Xml.h  pugixml.hpp  temp_define.h  uuid.h  xmlconfig.h
src/: CMakeLists.txt
src/ndsl/: CMakeLists.txt
src/ndsl/net/: BaseChannel.cc  CMakeLists.txt  ControlMsg.proto  DTP.cc  DTPClient.cc  Dns.cc  ELThreadpool.cc  Entity.cc  Epoll.cc  EventLoop.cc  EventfdChannel.cc  EventfdConnection.cc  FifoIpc.cc  Multiplexer.cc  PipeAndFifo.cc  PipeChannel.cc  RdmaAcceptor.cc  RdmaClient.cc  RdmaConnection.cc  SignalChannel.cc  SignalHandler.cc  SocketAddress.cc  SocketAddressUn.cc  SocketOpt.cc  TcpAcceptor.cc  TcpChannel.cc  TcpClient.cc  TcpConnection.cc  TimeWheel.cc  UdpChannel.cc  UdpClient.cc  UdpEndpoint.cc  UnixAcceptor.cc  UnixChannel.cc  UnixConnection.cc  WQThreadpool.cc  net.ControlMsg.proto
src/ndsl/utils/: CMakeLists.txt  Endian.cc  Error.cc  EventLoopThreadpool.cc  Guid.cc  Interrupter.cc  Log.cc  Plugin.cc  Semaphore.cc  Thread.cc  TimeStamp.cc  Xml.cc  xmlconfig.cpp
tests/: CMakeLists.txt  recvFileTest.txt  sendFileTest.txt  test.cc
tests/Plugintest/: Clientplugin.cc  plugintest.cc
tests/entitytest/: CMakeLists.txt  EntityTest.cc  Protbload.proto  Protbload22.pb.cc  Protbload22.pb.h
tests/net/: CMakeLists.txt  DnsTest.cc  DtpTest.cc  ELThreadpoolTest.cc  EpollTest.cc  EventLoopTest.cc  EventfdTest.cc  FifoIpcTest.cc  MultiplexerTest.cc  PipeAndFifoTest.cc  RdmaTest.cc  SignalfdTest.cc  SocketsOps_unittest.cc  SockoptTest.cc  TcpAcceptorTest.cc  TcpConnectionTest.cc  TimeWheelTest.cc  UdpEndpointTest.cc  UnixAndTcpSocketAddressTest.cc  UnixConnectionTest.cc  WQThreadpoolTest.cc  socketaddress46test.cc  tTcpConnectionTest.cc  unixsockaddrtest.cc
tests/ping-pong/: CMakeLists.txt  cli.val  client.cc  nClient.cc  ser.val  server.cc  一个假装很正式的性能测试报告.md  性能对比.xlsx
tests/rdma_rc_pingpong/: CMakeLists.txt  Client.cc  RDMA pingpong Test.md  Server.cc
tests/utils/: CMakeLists.txt  EndianTest.cc  ErrorTest.cc  EventLoopThreadpoolTest.cc  GuidTest.cc  LogTest.cc  PluginTest.cc  SemaphoreTest.cc  ThreadTest.cc  TimeStampTest.cc  XMLConfig_test.cc  XmlTest.cc  students.xml  test.h
tests/v8test/: CMakeLists.txt  V8Test.cc
tests/valgrind/: ELThreadpoolTest.val  EndianTest.val  EpollTest.val  ErrorTest.val  EventLoopTest.val  EventfdTest.val  GuidTest.val  LogTest.val  MultiplexerTest.val  PipeAndFifoTest.val  PluginTest.val  SemaphoreTest.val  SignalfdTest.val  SockoptTest.val  TcpAcceptorTest.val  TcpConnectionTest.val  TimeStampTest.val  TimeWheelTest.val  UdpEndpointTest.val  UnixAndTcpSocketAddressTest.val  UnixConnectionTest.val
